--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .idea
 __pycache__
 *.log
+.vscode
+ticker_engineering/all_tickers_exchanges.json
+ticker_engineering/filtered_tickers_exchanges.json
