--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ ccxt==2.7.16
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+colorama==0.4.6
 constantly==15.1.0
 cryptography==38.0.4
 cssselect==1.2.0
@@ -27,7 +27,7 @@ itemloaders==1.0.6
 jmespath==1.0.1
 lxml==4.9.1
 multidict==6.0.3
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1671485066441/work
+numpy==1.24.2
 packaging==21.3
 pandas==1.5.2
 parsel==1.7.0
@@ -42,25 +42,26 @@ pycryptodome==3.16.0
 PyDispatcher==2.0.6
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-socks==2.1.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1671365381334/work
+pytz==2022.7.1
 queuelib==1.6.2
 requests==2.28.1
-requests-file==1.5.1
+requests-file==1.5.1ц
 Scrapy==2.7.1
 service-identity==21.1.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six==1.16.0
 termcolor==2.1.1
 tldextract==3.4.0
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1662214488106/work
 Twisted==22.10.0
+twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing_extensions==4.4.0
 urllib3==1.25.11
 virtualenv==20.15.0
 virtualenv-clone==0.5.7
 w3lib==2.1.0
+wincertstore==0.2
 yarl==1.8.2
 zope.interface==5.5.2
