--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ attrs==22.1.0
 autobahn==22.7.1
 Automat==22.10.0
 binance-connector==2.0.0rc3
-ccxt==2.7.16
+ccxt==2.8.47
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -48,14 +48,14 @@ python-socks==2.1.1
 pytz==2022.7.1
 queuelib==1.6.2
 requests==2.28.1
-requests-file==1.5.1ц
+requests-file==1.5.1
 Scrapy==2.7.1
 service-identity==21.1.0
 six==1.16.0
 termcolor==2.1.1
 tldextract==3.4.0
+tqdm==4.64.1
 Twisted==22.10.0
-twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing_extensions==4.4.0
 urllib3==1.25.11
